syntax = "proto3";

option java_package = "io.anemos.metastore.v1alpha1";

package anemos.metastore.v1alpha1;

enum RuleType {
    UNSPECIFIED = 0;
    LINT = 1;

}

enum Severity {
    INFO = 0;
    WARNING = 1;
    ERROR = 2;
}

enum Delta {
    UNCHANGED = 0;
    CHANGED = 1;
    ADDITION = 2;
    REMOVAL = 3;
}

enum TypeChange {
    TYPE_UNCHANGED = 0;
    TYPE_SAFE = 1;
    TYPE_LOOSE_INFO = 2;
}

message FileDiff {

}

message MessageDiff {
    Delta delta = 2;
    repeated FieldDiff diffs = 3;
}

message FieldDiff {
    Field field = 1;
    Delta delta = 2;
}

message Field {
    int32 index = 1;
    string name = 2;
    string type = 3;
    TypeChange type_change = 4;
}

message RuleInfo {
    string package_name = 1;
    oneof f {
        string message_name = 2;
        string enum_name = 3;
    }
    Severity severity = 4;

}

message SchemaDiff {
    repeated RuleInfo rules = 1;
}
